// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin assignments 1`] = `
"module.exports = function (_scope, {}) {
            let x;
            _scope.x++;
            _scope.x = 1;
            return _scope;
};"
`;

exports[`plugin references 1`] = `
"module.exports = function (_scope, {}) {
            let x;
            (0, _scope.x)();
            !function () {
                        _scope.x++;
            };
            () => {
                        return { x: _scope.x };
            };
            return _scope;
};"
`;
